--- a/style/main.css
+++ b/style/main.css
@@ -635,11 +635,25 @@
     line-height: 16px;
   }
   .blok-methods-of-action {
-  }
-  .blok-methods-of-action__icons-effective {
+    padding-top: 38px;
   }
   .blok-methods-of-action__title {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 27px;
+    padding-top: 23px;
+    letter-spacing: 0.42px;
+    color: #1a0800;
   }
   .blok-methods-of-action__text {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: 0.42px;
+    padding-top: 5px;
   }
 }
