--- a/style/main.css
+++ b/style/main.css
@@ -656,4 +656,43 @@
     letter-spacing: 0.42px;
     padding-top: 5px;
   }
+  .blok-bakg-font {
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 103px;
+    line-height: 16px;
+  }
+  .blok-bakg-font__content {
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 103px;
+    line-height: 16px;
+    padding-left: 60px;
+    padding-right: 44px;
+  }
+  .blok-bakg-font__title {
+    padding-top: 12px;
+    padding-left: 12px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 43px;
+    line-height: 56px;
+  }
+  .blok-bakg-font__box {
+  }
+  .blok-bakg-font__icon-dox {
+    padding-top: 40px;
+  }
+  .blok-bakg-font__text {
+    font-size: 13px;
+  }
+  .blok-bakg-font__text-box {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: 0.42px;
+  }
 }
