--- a/style/main.css
+++ b/style/main.css
@@ -679,8 +679,7 @@
     font-size: 43px;
     line-height: 56px;
   }
-  .blok-bakg-font__box {
-  }
+
   .blok-bakg-font__icon-dox {
     padding-top: 40px;
   }
@@ -694,5 +693,36 @@
     font-size: 16px;
     line-height: 27px;
     letter-spacing: 0.42px;
+  }
+  .blok-bakground-color {
+    padding: 15px;
+  }
+  .blok-bakground-color__box {
+    text-align: center;
+    flex-direction: column;
+  }
+
+  .blok-bakground-color__text {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 32px;
+    letter-spacing: 0.42px;
+    color: #ffffff;
+    padding-top: 57px;
+  }
+  .blok-bakground-color__flag-box {
+    padding-left: 281px;
+  }
+  .blok-bakground-color__еditions {
+    padding-left: 260px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 22px;
+    letter-spacing: 0.25px;
+    color: #ffffff99;
   }
 }
