--- a/style/main.css
+++ b/style/main.css
@@ -37,6 +37,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  max-width: 76%;
   font-size: 76px;
   line-height: 98px;
   color: #ffffff;
@@ -45,6 +46,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  max-width: 46%;
   font-size: 22px;
   line-height: 37px;
   color: #ffffff;
@@ -97,13 +99,15 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
-  font-size: 76px;
+  max-width: 78%;
+  font-size: 43px;
   line-height: 56px;
 }
 .about-blok__text {
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  max-width: 74%;
   font-size: 16px;
   line-height: 27px;
   letter-spacing: 0.42pt;
@@ -149,7 +153,7 @@
 .middle-box__blok-a {
   width: 100%;
   max-width: 776px;
-  height: 849px;
+  height: 676px;
   background: url(../picture/Img.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -163,6 +167,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  max-width: 75%;
   font-size: 43px;
   line-height: 56px;
 }
@@ -170,6 +175,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  max-width: 80%;
   font-size: 16px;
   line-height: 27px;
   letter-spacing: 0.42pt;
@@ -208,7 +214,7 @@
 .blok-middle-layout {
   width: 100%;
   max-width: 800px;
-  height: 500px;
+  height: 551px;
   background: url(../picture/blok.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -216,13 +222,13 @@
   border-radius: 11px;
 }
 .blok-middle-manage__contents {
-  padding-top: 100px;
-  padding-left: 120px;
+  padding: 28px;
 }
 .blok-middle-manage__title {
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  max-width: 82%;
   font-size: 48px;
   line-height: 56px;
   color: #1a0800;
@@ -421,6 +427,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
+  margin: auto;
 }
 
 .blok-bakground-color__box {
