--- a/style/main.css
+++ b/style/main.css
@@ -291,6 +291,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  max-width: 79%;
   font-size: 51px;
   line-height: 56px;
   color: #1a0800;
@@ -300,13 +301,15 @@
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
+  max-width: 83%;
   line-height: 27px;
   letter-spacing: 0.42px;
   padding-top: 31px;
 }
 .blok-chat__chat-blok {
-  padding-top: 204px;
+  padding-top: 163px;
   padding-right: 149px;
+  padding-left: 80px;
 }
 .blok-chat-button {
   width: 196px;
@@ -342,14 +345,20 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  max-width: 48%;
   font-size: 50px;
   line-height: 58px;
   padding-top: 110px;
+  padding-left: 107px;
 }
 .blok-technologies__methods-box {
   display: flex;
   justify-content: space-between;
   padding-top: 52px;
+  padding-left: 113px;
+}
+.blok-technologies-of-action {
+  padding-right: 22px;
 }
 .blok-methods-of-action__title {
   font-family: "Roboto";
