--- a/style/main.css
+++ b/style/main.css
@@ -166,6 +166,7 @@
 .middle-box__blok-b {
   padding-left: 50px;
   padding-right: 122px;
+  width: 100%;
 }
 .middle-box__title {
   font-family: "Roboto";
@@ -449,22 +450,28 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  width: 100%;
+  max-width: 431px;
   font-size: 43px;
   line-height: 56px;
 }
-.blok-bakg-font__text {
+.blok-bakg-font__text-two {
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  width: 100%;
+  max-width: 360px;
   font-size: 16px;
   line-height: 27px;
   letter-spacing: 0.42px;
   padding-left: 3px;
 }
-.blok-bakg-font__text-box {
+.blok-bakg-font__text-one {
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
+  width: 100%;
+  max-width: 346px;
   font-size: 16px;
   line-height: 27px;
   letter-spacing: 0.42px;
@@ -535,10 +542,12 @@
     text-align: center;
     font-size: 42px;
     line-height: 45px;
+    margin: auto;
   }
 
   .title__text {
     text-align: center;
+    margin: auto;
   }
 
   .title__button {
@@ -567,9 +576,11 @@
   .about-blok__title {
     font-size: 42px;
     line-height: 45px;
+    margin: auto;
   }
   .about-blok__text {
     font-size: 22px;
+    margin: auto;
   }
   .about-blok__button {
     width: 100%;
@@ -593,10 +604,12 @@
     font-size: 42px;
     line-height: 45px;
     text-align: center;
+    margin: auto;
   }
   .middle-box__text {
     font-size: 22px;
     padding: 14px;
+    margin: auto;
   }
   .blok-middle-manage-button {
     width: 100%;
@@ -613,10 +626,12 @@
     font-size: 48px;
     line-height: 56px;
     color: #1a0800;
+    margin: auto;
   }
   .blok-middle-manage__text {
     font-size: 22px;
     line-height: 27px;
+    margin: auto;
   }
   .blok-middle-manage-button {
     width: 100%;
@@ -642,10 +657,12 @@
     font-size: 42px;
     line-height: 45px;
     color: #1a0800;
+    margin: auto;
   }
   .blok-chat__text {
     font-size: 22px;
     line-height: 27px;
+    margin: auto;
   }
   .blok-technologies {
     flex-direction: column;
@@ -659,6 +676,7 @@
     font-size: 42px;
     line-height: 45px;
     padding: 14px;
+    margin: auto;
   }
   .blok-technologies__methods-box {
     flex-direction: column;
@@ -678,6 +696,17 @@
     font-size: 22px;
     line-height: 27px;
     padding: 14px;
+    margin: auto;
+  }
+  .blok-methods-of-action__text-two {
+    font-size: 22px;
+    line-height: 27px;
+    margin: auto;
+  }
+  .blok-methods-of-action__text-three {
+    font-size: 22px;
+    line-height: 27px;
+    margin: auto;
   }
   .blok-bakg-font {
     flex-direction: column;
@@ -697,11 +726,15 @@
     padding-left: 12px;
     font-size: 43px;
     line-height: 56px;
+    margin: auto;
+  }
+  .blok-bakg-font__box {
+    margin: auto;
   }
 
   .blok-bakg-font__icon-dox {
     padding-top: 40px;
-    padding-left: 45px;
+    padding-left: 57px;
   }
   .blok-bakg-font__text {
     font-size: 22px;
@@ -719,9 +752,6 @@
     flex-direction: column;
     padding: 14px;
   }
-  .blok-bakground-color__box-icons {
-    padding-right: 165px;
-  }
 
   .blok-bakground-color__text {
     font-size: 22px;
@@ -729,10 +759,10 @@
   }
 
   .blok-bakground-color__flag-box {
-    padding-left: 34px;
+    padding-left: 135px;
   }
   .blok-bakground-color__еditions {
-    padding-left: 34px;
+    padding-left: 64px;
     font-size: 12px;
     line-height: 22px;
   }
